--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
           <li><a href="/movies">Movies</a></li>
           <li><a href="/characters">Characters</a></li>
           <li><a href="/actors">Actors</a></li>
-          <li><a href="/rails/info">Sitemap</a></li>
+          <li><a href="/bookmarks">Bookmarks</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
@@ -66,7 +66,7 @@
 
           <li>
             <a href="/users/edit">
-              <%= current_user.email %>
+              <%= current_user.username %>
             </a>
           </li>
 
